# QuasiSymmetries

./: .gitignore  24c3399c-0576-4140-9c6f-8c9b1f7cb522.hdf5  benchmark_all.py  benchmark_clifford_routes.py  bliss_hct_benchmark.py  camps_clifford_benchmarks.py  dmrg_work_flow_check.py  fcidump_openfermion.py  fcidump_pyblock2.py  fermionic_bds.py  fiedler_test.py  h8bench.py  ham_gen.py  hct_bs_sample.py  july08_clifford_benchmarks.py  mpo_bds.py  orb_rot_opt.py  parent_Ham_Clean.ipynb  plot_bvN.py  pt_sector.py  pyproject.toml  readme.md  rep_bs.py  results_CISD_guess.txt  results_fci_guess.txt  runtime_benchmark.py  sep_norms.py  state_agnostic_bs_benchmarks.py  state_agnostic_bs_fiedler_benchmarks.py  symmetry_sweep_h4.py  terminal_output_test.txt  test_mpo_ferm.py  test_n2_pool.py  tests.ipynb  tests_symsearch.ipynb  variational_orbital_opt.py
documents/: one_norm_commutant_search-2.tex  polynomial_symmetries_rewrite_hubbard_orbitals.tex
saved/: H2O_corr_bshct_nc_exp_cisd_entanglement_by_nsym.csv  H2O_corr_hct_nc_exp_cisd_entanglement_by_nsym.csv  H4chain_corr_bshct_nc_exp_cisd_entanglement_by_nsym.csv  H4chain_corr_hct_nc_exp_cisd_entanglement_by_nsym.csv  H4chain_corr_nc_exp_cisd_May4  H4chain_corr_nc_exp_opt_May4  H4chain_eqm_nc_exp_opt_May4  _nc_exp_cisd_JUNE14_fiedler  _nc_exp_cisd_JUNE28  _nc_exp_cisd_JUNE28H4chain_corr_datasets.pkl  _nc_exp_cisd_MAY18  _nc_exp_cisd_MAY22  _nc_exp_cisd_MAY22H4chain_eqm_datasets.pkl  _nc_exp_cisd_MAY22_dmrg_bd.csv  _nc_exp_cisd_MAY26  _nc_exp_cisd_MAY26H4chain_corr_datasets.pkl  _nc_exp_cisd_MAY26H4chain_diss_datasets.pkl  (+19 more)
(+206 files in other folders)
